<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backGroundColor"
    android:layout_height="match_parent"
    android:paddingBottom="80dp">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/black"
        android:src="@drawable/close_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doneButton"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/filter_options"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/closeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brandView"
        android:foregroundTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:hint="@string/brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneButton">

        <AutoCompleteTextView
            android:id="@+id/brandAutoView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="none"
            android:paddingHorizontal="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sizeView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandView">

        <AutoCompleteTextView
            android:id="@+id/sizeAutoView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="none"
            android:paddingHorizontal="16dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="140dp"
        android:gravity="center"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/priceView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceView"
        android:text="400$ - 5000$" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/shop"
        android:valueFrom="0.0"
        android:valueTo="10000.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceTextView"
        app:layout_constraintTop_toBottomOf="@+id/sizeView"
        app:values="@array/initial_slider_values" />


</androidx.constraintlayout.widget.ConstraintLayout>