<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myCartTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/my_cart"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#010035"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCartTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                app:layout_constraintBottom_toTopOf="@+id/lineTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_cart" />

            <View
                android:id="@+id/lineTop"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="#40FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/totalTextView" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/nunito"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/deliveryTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/totalTextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/deliveryTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="6000$" />

            <TextView
                android:id="@+id/deliveryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nunito"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/lineBottom"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/deliveryTextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/lineBottom"
                app:layout_constraintStart_toStartOf="@+id/totalTextViewValue" />

            <View
                android:id="@+id/lineBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="#40FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/checkoutButton" />


            <TextView
                android:id="@+id/checkoutButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_goneMarginBottom="20dp"
                tools:layout_editor_absoluteX="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>