<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/backGroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundColor"
        android:paddingBottom="20dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/black"
            android:src="@drawable/back_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/basketButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/orange"
            android:src="@drawable/basket_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/product_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/picturesViewPager"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picturesViewPager"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/productNameTextView"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Galaxy Note 20 Ultra" />

                <ImageView
                    android:id="@+id/favouritesView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/heart_on"
                    app:layout_constraintBottom_toBottomOf="@+id/productNameTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/productNameTextView" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/ratingView"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="@+id/productNameTextView"
                    app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ratingView"
                    app:tabIndicatorColor="@color/orange"
                    app:tabSelectedTextColor="@color/orange"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/features" />

                </com.google.android.material.tabs.TabLayout>

                <ImageView
                    android:id="@+id/cameraImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/camera_vector"
                    app:layout_constraintEnd_toStartOf="@+id/center"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

                <TextView
                    android:textSize="11sp"
                    android:id="@+id/cameraText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/cameraImage"
                    app:layout_constraintStart_toStartOf="@+id/cameraImage"
                    app:layout_constraintTop_toBottomOf="@+id/cameraImage"
                    tools:text="108 mp" />

                <ImageView
                    android:id="@+id/CPUImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:src="@drawable/cpu_vector"
                    app:layout_constraintEnd_toStartOf="@+id/cameraImage"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

                <TextView
                    android:textSize="11sp"
                    android:id="@+id/CPUText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/CPUImage"
                    app:layout_constraintStart_toStartOf="@+id/CPUImage"
                    app:layout_constraintTop_toBottomOf="@+id/CPUImage"
                    tools:text="Exynos 990" />

                <ImageView
                    android:id="@+id/RAMImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ram_vector"
                    app:layout_constraintBottom_toBottomOf="@+id/cameraImage"
                    app:layout_constraintStart_toStartOf="@+id/center"
                    app:layout_constraintTop_toTopOf="@+id/cameraImage" />

                <TextView
                    android:textSize="11sp"
                    android:id="@+id/RAMText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/RAMImage"
                    app:layout_constraintStart_toStartOf="@+id/RAMImage"
                    app:layout_constraintTop_toBottomOf="@+id/RAMImage"
                    tools:text="8 GB" />

                <ImageView
                    android:id="@+id/ROMImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="50dp"
                    android:src="@drawable/rom_vector"
                    app:layout_constraintBottom_toBottomOf="@+id/cameraImage"
                    app:layout_constraintStart_toEndOf="@+id/RAMImage"
                    app:layout_constraintTop_toTopOf="@+id/cameraImage" />

                <TextView
                    android:textSize="11sp"
                    android:id="@+id/ROMText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/ROMImage"
                    app:layout_constraintStart_toStartOf="@+id/ROMImage"
                    app:layout_constraintTop_toBottomOf="@+id/ROMImage"
                    tools:text="256 GB" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/selectTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/select_color_and_capacity"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CPUText" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/firstColor"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintStart_toStartOf="@+id/selectTextView"
                    app:layout_constraintTop_toBottomOf="@+id/selectTextView">

                    <ImageView
                        android:padding="4dp"
                        android:id="@+id/isFirstColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/secondColor"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintStart_toEndOf="@+id/firstColor"
                    app:layout_constraintTop_toBottomOf="@+id/selectTextView">

                    <ImageView
                        android:padding="4dp"
                        android:id="@+id/isSecondColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/firstROMText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/round_background"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/nunito_bold"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/secondColor"
                    app:layout_constraintEnd_toStartOf="@+id/secondROMText"
                    app:layout_constraintTop_toTopOf="@+id/secondColor"
                    tools:text="128 GB" />

                <TextView
                    android:id="@+id/secondROMText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:backgroundTint="@color/backGroundColor"
                    android:fontFamily="@font/nunito_bold"
                    android:padding="10dp"
                    android:textColor="@color/icon_gray"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/secondColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/secondColor"
                    tools:text="256 GB" />

                <Button
                    android:id="@+id/cartButton"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:fontFamily="@font/nunito_bold"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/orange"
                    app:layout_constraintTop_toBottomOf="@+id/secondColor"
                    tools:layout_editor_absoluteX="16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>